--- a/proxy./package.json
+++ b/proxy./package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "fyers-api-v3": "^3.0.2",
+    "fyers-api-v3": "3.0.1",
     "ws": "^8.17.0"
   }
 }
-
