--- a/proxy./package.json
+++ b/proxy./package.json
@@ -1,15 +1,16 @@
 {
-  "name": "fyers-proxy-server",
+  "name": "fyers-proxy-server-modern",
   "version": "1.0.0",
-  "description": "Proxy for Fyers API and WebSocket",
+  "description": "Proxy for Fyers V3 API using modern libraries",
   "main": "proxy.js",
   "scripts": {
     "start": "node proxy.js"
   },
   "dependencies": {
+    "@fyers-api/rest": "^1.1.0",
+    "@fyers-api/websocket": "^1.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "fyers-api-v3": "3.0.1",
     "ws": "^8.17.0"
   }
 }
